--- a/html.html
+++ b/html.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="handleClick">onclick</button>
+    <button onclick="handleClick">CLICKME</button>
     <script src="java.js"></script>
 </body>
 </html>
